# katype

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
src/: code.rs  main.rs  result.rs  utils.rs  word.rs
