[package]
name = "katype"
version = "0.2.2"
description = "A fast typing test from terminal writted in Rust 🦀"
repository = "https://github.com/kadircy/katype"
homepage = "https://github.com/kadircy/katype"
readme = "README.md"
license = "MIT"
keywords = ["typing", "test", "tui", "cli", "monkeytype"]
categories = ["command-line-interface"]
exclude = ["assets", "./install.sh"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
